--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.parboiled</groupId>
+			<artifactId>parboiled-core</artifactId>
+			<version>1.1.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
