--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,11 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.plivo</groupId>
+			<artifactId>plivo-java</artifactId>
+			<version>3.0.8</version>
+		</dependency>
 
 	</dependencies>
 
