--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -2,7 +2,7 @@ message.regSucc=You registered successfully. Click on the link to activate your 
 message.regError=An account for that username/email already exists. Please enter a different username.
 message.token=Your token is:
 message.disabled=Your account is disabled please check your mail and click on the confirmation link
-message.expired=Your registration token has expired. Please register again.
+message.expired=Your token has been expired. Please try again.
 message.invalidUser=This username is invalid, or does not exist.
 message.invalidToken=Invalid account confirmation token.
 message.resendToken=We will send an email with a new registration token to your email account
