--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
 			<version>3.0.8</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging-api</artifactId>
+			<version>1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
