--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,9 @@ spring.datasource.password= postgres
 
 ##Hibernate Configuration##
 spring.jpa.hibernate.ddl-auto= update
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-##Mail##
+##Logging##
+logging.level.root=info
+logging.file=/home/mindfire/bicycleSharing.log
