--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ##Database Configuration##
 spring.datasource.driverClassName = org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://localhost:5432/testboot
+spring.datasource.url = jdbc:postgresql://localhost:5432/cycle_rental
 spring.datasource.username= postgres
 spring.datasource.password= postgres
 
