--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
 			<artifactId>commons-logging-api</artifactId>
 			<version>1.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.github.darrachequesne</groupId>
+			<artifactId>spring-data-jpa-datatables</artifactId>
+			<version>1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
