--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 ##Logging##
 logging.level.root=info
 logging.file=/home/mindfire/bicycleSharing.log
+
+##Server Info##
+server.context-path=localhost:8080
