--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -1,5 +1,5 @@
-mail.server.host=smtp.gmail.com
-mail.server.port=587
+mail.server.host=mail.smtp2go.com
+mail.server.port=2525
 mail.server.protocol=smtp
-mail.server.username=bicyclerentaljava@gmail.com
-mail.server.password=bicyclerental@java
+mail.server.username=registration@cyclerental.com
+mail.server.password=YHrwgNew9vuu
